# libpzip

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: cmake_uninstall.cmake.in  pzipConfig.cmake.in
docs/: engineering_requirements_checklist.md  parallel_zip_arch_spec.md  perf_profiling_guide.md  third_party_dependencies.md  time_perf.sh
examples/: encryption_reserved_c.c  lz4_codec_c.c  minimal_c.c  pzip_unzip_cli.c  pzip_unzip_cli.cpp  pzip_zip_cli.c  pzip_zip_cli.cpp  zstd_codec_c.c
include/: pzip.h
src/api/: pzip_c_api.cpp
src/codec/: lz4_codec.cpp  lz4_codec.h  zlib_codec.cpp  zlib_codec.h  zstd_codec.cpp  zstd_codec.h
src/core/: pzip_engine.cpp  pzip_engine.h
src/io/: file_reader.cpp  file_reader.h
src/platform/: time_provider.cpp  time_provider.h
src/zip/: zip_writer.cpp  zip_writer.h
tests/: archive_open_failure_c.c  backpressure_progress_cpp.cpp  cancel_pipeline_cpp.cpp  codec_failure_cpp.cpp  encryption_pipeline_cpp.cpp  extract_pipeline_cpp.cpp  parallel_pipeline_c.c  writer_mid_failure_cpp.cpp
